@@ -1,4 +1,4 @@
-// 1.20.1	2024-02-22T20:38:21.5309347	Recipes
+// 1.20.1	2024-03-04T20:23:07.3160708	Recipes
 4b4d517a9d089ca8364caa37e6af046036ac7e4b data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun.json
 69d766b801d4696be5dc354a707d441975772e1f data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun_upgrading.json
 7ffa02ab3daf2efe7cf0743d694a8c87bed270f0 data/chilibulletweapons/advancements/recipes/combat/chili_bullet.json
@@ -12,15 +12,23 @@ d9328aca5515345334e81e0469345aaa401ff122 data/chilibulletweapons/advancements/re
 fbd23f8578937b79e2b96c0d3feeb143871d08de data/chilibulletweapons/advancements/recipes/food/half_chili_fish_sandwich.json
 b2515a763fc5b294b4a79a2f1fca1730c3f72d4a data/chilibulletweapons/advancements/recipes/food/half_chili_meat_sandwich.json
 fee57ccdc1c2f5d8c2711443669e7995e89bfb16 data/chilibulletweapons/advancements/recipes/food/half_chili_potato_sandwich.json
+8ba4ebeefd8538b7c01a4b392ae5ed2a36fd3f89 data/chilibulletweapons/advancements/recipes/misc/bullet_chili_from_sack.json
+4153759edaa2310f23a6604f54506bde111c60b1 data/chilibulletweapons/advancements/recipes/misc/bullet_chili_sack.json
 6904bee18322e0ade707fede6c168b64b82dbe23 data/chilibulletweapons/advancements/recipes/misc/chili_seeds.json
+40e18cc0a17d041ffbd48812d4a9728596490fb2 data/chilibulletweapons/advancements/recipes/misc/curved_chili_from_sack.json
+b58a0a46d99b0f79ef821eafacf3fab98e3a5382 data/chilibulletweapons/advancements/recipes/misc/curved_chili_sack.json
 66122f0136e1a4144fd06d078d817860808ff3d2 data/chilibulletweapons/recipes/bayoneted_gun.json
 effeb35e01257e8c2751582cd9e40a2fce7b05db data/chilibulletweapons/recipes/bayoneted_gun_upgrading.json
+60dbca9953956dbf28cd3b6c59b4e37a30c4f693 data/chilibulletweapons/recipes/bullet_chili_from_sack.json
+97235932162f4d9cb93806ef85c7e89775247963 data/chilibulletweapons/recipes/bullet_chili_sack.json
 f51652659b03401db01b010acc39813e271175fe data/chilibulletweapons/recipes/chili_bullet.json
 cd9b01a373142bf2a6b654911c71ea3abcdd1e7f data/chilibulletweapons/recipes/chili_chicken_sandwich.json
 49ea7c5ce4ad8b0a4253e954e6fef16fa921575c data/chilibulletweapons/recipes/chili_fish_sandwich.json
 e5cbfecefcfb9539a4a2963e548d8aff4c4ecc66 data/chilibulletweapons/recipes/chili_meat_sandwich.json
 ca19e426945362dd42170edd4aaa64be8606f966 data/chilibulletweapons/recipes/chili_potato_sandwich.json
 1b2a3529775774f400cdcb4d766218ac8f646c57 data/chilibulletweapons/recipes/chili_seeds.json
+85ef522782e89175989765eacb12ccf4fc466df9 data/chilibulletweapons/recipes/curved_chili_from_sack.json
+beb06a5638ca9fad17edd0336bcbe5b7080c723a data/chilibulletweapons/recipes/curved_chili_sack.json
 5773a14b66239f73389ed4622fa6ab4bf02e08d4 data/chilibulletweapons/recipes/fried_chili_pepper.json
 eb6a06d71e7be557d85bf5852e04a2adf9eebff4 data/chilibulletweapons/recipes/gun.json
 835879ec7dea1617d89ed60ee7774e29831c1283 data/chilibulletweapons/recipes/half_chili_chicken_sandwich.json
