@@ -1,2 +1,2 @@
-// 1.20.1	2024-02-22T20:38:21.5319757	Languages: en_us
-c2e18aa807da03c855af015010a3b5b5c1c9008b assets/chilibulletweapons/lang/en_us.json
+// 1.20.1	2024-03-04T20:23:07.3354506	Languages: en_us
+98f99d7c4e61a9fc6e83d84d428bc365f6f33666 assets/chilibulletweapons/lang/en_us.json
